--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -164,15 +164,15 @@ body {
 }
 
 .site-logo {
-    max-height: 45px;
+    max-height: 200px;
 }
 
 .site-description {
     z-index: 10;
     margin: 0;
     padding: 5px 0;
-    font-size: 2.2rem;
-    font-weight: 300;
+    font-size: 3rem;
+    font-weight: 400;
     letter-spacing: 0.5px;
     opacity: 0.8;
 }
@@ -264,6 +264,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     padding: 10px 12px;
     color: #fff;
     opacity: 0.8;
+    font-weight: bold;
 }
 
 .nav li a:hover {
