Incorporar cambios que están subidos al blog
El repositorio quedó desactualizado con respecto a lo que está subido en
el blog. Este commit pisa los archivos con los que se están usando en este
momento en el blog.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -480,3 +480,15 @@ h6 {
     font-size: 1.4rem;
     font-weight: 500;
 }
+
+.column {
+    float: left;
+    width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
