--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1214,6 +1214,9 @@ Usage (In Ghost editor):
     text-decoration: none;
 }
 
+.read-time-card {
+    color: #3EB0EF !important;
+}
 
 /* 7.3. Comments
 /* ---------------------------------------------------------- */
@@ -1913,4 +1916,147 @@ Usage (In Ghost editor):
     .site-footer-nav a:first-child {
         margin-left: 0;
     }
+}
+
+/* 12. Koenig editor
+/* ---------------------------------------------------------- */
+
+.kg-width-wide img {
+    max-width: 85vw;
+}
+
+.kg-width-full img {
+    max-width: 100vw;
+}
+
+.kg-bookmark-card {
+    width: 100%;
+    position: relative;
+}
+
+.kg-bookmark-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    color: currentColor;
+    font-family: inherit;
+    text-decoration: none;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.kg-bookmark-container:hover {
+    text-decoration: none;
+}
+
+.kg-bookmark-content {
+    flex-basis: 0;
+    flex-grow: 999;
+    padding: 20px;
+    order: 1;
+}
+
+.kg-bookmark-title {
+    font-weight: 600;
+}
+
+.kg-bookmark-metadata,
+.kg-bookmark-description {
+    margin-top: .5em;
+}
+
+.kg-bookmark-metadata {
+    align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.kg-bookmark-description {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.kg-bookmark-icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    vertical-align: text-bottom;
+    margin-right: .5em;
+    margin-bottom: .05em;
+}
+
+.kg-bookmark-thumbnail {
+    display: flex;
+    flex-basis: 24rem;
+    flex-grow: 1;
+}
+
+.kg-bookmark-thumbnail img {
+    max-width: 100%;
+    height: auto;
+    vertical-align: bottom;
+    object-fit: cover;
+}
+
+.kg-bookmark-author {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.kg-bookmark-publisher::before {
+    content: "•";
+    margin: 0 .5em;
+}
+
+.kg-gallery-container {
+    display: flex;
+    flex-direction: column;
+    margin: 1.5em auto;
+    max-width: 1040px;
+    width: 100vw;
+}
+
+.kg-gallery-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.kg-gallery-image img {
+    display: block;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Adjust search field */
+.ss360-custom-search .ss360-custom-search__searchbox {
+    max-width: 100%;
+    color: #111;
+}
+
+/* Remove background, reset text colours */
+.ss360-layer {
+    background: none;
+    color: inherit;
+}
+
+/* Remove shadows from various elements */
+.ss360-suggests,
+a.ss360-suggests__image-wrap,
+a.ss360-suggests__image-wrap:hover,
+a.ss360-layer__heading-anchor {
+    box-shadow: none;
+}
+
+/* Adjust feature image */
+a.ss360-suggests__image-wrap img {
+    max-width: 100%;
+}
+
+/* Shift down text content, inline with feature images */
+.ss360-suggests__content {
+    margin-top: 1em;
 }
