--- a/page-featured.hbs
+++ b/page-featured.hbs
@@ -1,12 +1,18 @@
 {{!< default}}
 
-<header class="site-header outer">
+<header class="site-header outer" style="background-image: url({{asset "forest2.jpg"}})">
     <div class="inner">
         {{> "site-nav"}}
     </div>
     <div class="site-header-content section-header-content">
         <h1 class="site-title">Featured Posts</h1>
     </div>
+    <style>
+        .site-title {
+            -webkit-filter: drop-shadow(2px 2px 2px #000);
+            filter: drop-shadow(2px 2px 2px #000);
+        }
+    </style>
 </header>
 
 {{#post}}
