--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -176,6 +176,7 @@ body {
     font-weight: 400;
     letter-spacing: 0.5px;
     opacity: 0.8;
+    line-height: 1.15;
 }
 
 @media (max-width: 500px) {
