--- a/index.hbs
+++ b/index.hbs
@@ -15,7 +15,7 @@ into the {body} of the default.hbs template --}}
                     {{@site.title}}
                 {{/if}}
             </h1>
-            <h2 class="site-description">{{@site.description}}</h2>
+            <p class="site-description">{{@site.description}}</p>
         </div>
         {{> "site-nav"}}
     </div>
