--- a/post.hbs
+++ b/post.hbs
@@ -32,7 +32,7 @@ into the {body} of the default.hbs template --}}
                         {{/primary_tag}}
                     </section>
                     <h1 class="post-full-title">{{title}}</h1>
-                    <h5 class="read-time-card">{{reading_time}}</h5>
+                    <p class="read-time-card">{{reading_time}}</p>
                 </header>
 
                 {{#if feature_image}}
