--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -13,7 +13,7 @@
         font-size: 1.2rem;
     }
 </style>
-<nav class="site-nav">
+<nav class="site-nav" aria-label="Site Navigation">
     <div class="site-nav-left">
         {{^is "home"}}
             {{#if @site.logo}}
