Navegación: mejorar contraste de inputs de búsqueda
Se llevaron algunas configuraciones del estilo de los inputs a CSS para
poder hacer que el search box y el button tengan colores distintos.

--- a/default.hbs
+++ b/default.hbs
@@ -74,24 +74,13 @@
                 themeColor: "#588936",
                 accentColor: "#2F2B2B",
                 searchBox: {
-                    text: {
-                        color: "#cecece",
-                        size: "14px"
-                    },
-                    border: {
-                        color: "#cecece",
-                        radius: "6px"
-                    },
                     padding: "10px",
                     icon: {
                         image: "magnifier",
-                        color: "#cecece"
+                        color: "#666"
                     },
                     button: {
                         text: "Search",
-                        color: "#cecece",
-                        iconPadding: "8px",
-                        radius: "6px"
                     }
                 }
             },
