--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -14,7 +14,7 @@
         {{/if}}
     </div>
     <div class="site-nav-right">
-        <div>
+        <div class="search">
             <input id="searchBox" type="search" style="margin: 10px" aria-labelledby="searchButton"/>
             <input type="submit" id="searchButton" style="background-color: transparent"/>
         </div>
