--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -282,6 +282,23 @@ body {
     height: 40px;
 }
 
+#searchBox {
+    color: #666;
+    font-size: 14px;
+    border: 1px solid #666;
+    border-radius: 6px;
+    padding: 10px;
+}
+
+#searchButton {
+    background-color: transparent;
+    color: #cecece;
+    font-size: 14px;
+    border: 1px solid #cecece;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
 .social-links {
     flex-shrink: 0;
     display: flex;
