--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -408,6 +408,7 @@ body {
     border-radius: 5px;
     box-shadow: rgba(39,44,49,0.06) 8px 14px 38px, rgba(39, 44, 49, 0.03) 1px 3px 8px;
     transition: all 0.5s ease;
+    position: relative;
 }
 
 .post-card:hover {
@@ -416,7 +417,7 @@ body {
     transform: translate3D(0, -1px, 0);
 }
 
-.post-card-image-link {
+.post-card-image-container {
     position: relative;
     display: block;
     overflow: hidden;
@@ -430,20 +431,15 @@ body {
     background-size: cover;
 }
 
-.post-card-content-link {
-    position: relative;
-    display: block;
+.post-card-preview {
     padding: 25px 25px 0;
-    color: var(--darkgrey);
-}
-
-.post-card-content-link:hover {
-    text-decoration: none;
 }
 
 .post-card-tags {
-    display: block;
     margin-bottom: 4px;
+}
+
+.post-card-tag {
     color: var(--midgrey);
     font-size: 1.2rem;
     line-height: 1.15em;
@@ -454,6 +450,22 @@ body {
 
 .post-card-title {
     margin-top: 0;
+}
+
+.post-card-title a {
+    color: var(--darkgrey);
+    text-decoration: none;
+}
+
+.post-card-title a:after {
+    position: absolute;
+    inset: 0;
+    content: '';
+    z-index: 1;
+}
+
+.post-card-meta {
+    z-index: 2;
 }
 
 .post-card-content {
@@ -499,7 +511,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
         flex-direction: row;
     }
 
-    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-image-link {
+    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-image-container {
         position: relative;
         flex: 1 1 auto;
         border-radius: 5px 0 0 5px;
@@ -515,7 +527,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
         flex: 0 1 357px;
     }
 
-    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) h2 {
+    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-title {
         font-size: 2.6rem;
     }
 
@@ -524,7 +536,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
         line-height: 1.55em;
     }
 
-    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-content-link {
+    .home-template .post-feed .post-card:nth-child(6n+1):not(.no-image) .post-card-preview {
         padding: 30px 40px 0;
     }
 
@@ -2094,4 +2106,14 @@ a.ss360-suggests__image-wrap img {
     margin: -50px auto;
     width: 100%;
     text-align: center
+}
+
+/* Accessibility */
+
+.sr-only {
+    display: block;
+    margin-right: -10000px;
+    width: 1px;
+    height: 1px;
+    overflow:hidden;
 }
